# cminusminus

./: .gitignore  CMakeLists.txt  Makefile  README.md  asm.h  asm_name.h  asmnemon.h  c--.doc  c--.ini  c--news.txt  class.cpp  coff.h  const.h  debug.cpp  dirlist.h  disasm.cpp  errors.cpp  id.h  le.h  libobj.cpp  main.c  main.cpp  misc.cpp  misc.h  new_type.cpp  optreg.cpp  outle.cpp  outobj.cpp  outpe.cpp  pointer.cpp  predef.txt  res.cpp  res.h  resname.h  startup.h--  struct.h  switch.cpp  table.h  tok.h  toka.cpp  (+4 more)
.builds/: freebsd.yml  openbsd.yml
.github/workflows/: codeql-analysis.yml  main.yml
doc/: code32.txt  comstr.txt  comstrd.txt  directin.txt  ifloop.txt  import.txt  index.txt  instr.txt  label.txt  output.txt  sintc.txt  sys.txt
fastlist/: Makefile  asmnemon.h  const.h  dirlist.h  fastlist  fastlist.c
tests/: hello.c--  noboot.c--  write.h--
